# shaulink-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  shaulink.db
src/: config.py  crud.py  db.py  functions.py  main.py  models.py  schemas.py
src/routers/: base_router.py  image_router.py  url_router.py
src/static/templates/: prerender.html
