[tool.poetry]
name = "shaulink-backend"
version = "1.0.0"
description = ""
authors = ["BOSHAU CHEN <b97390022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
redis = {extras = ["hiredis"], version = "^4.6.0"}
pydantic = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
