[tool.poetry]
name = "shaulink-backend"
version = "1.0.0"
description = ""
authors = ["BOSHAU CHEN <b97390022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
redis = {extras = ["hiredis"], version = "^4.6.0"}
pydantic = "^2.0.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"
streaming-form-data = "^1.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
aiosqlite = "^0.19.0"
cachetools = "^5.3.1"
boto3 = "^1.28.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
